@@ -223,32 +223,8 @@ util::Status ProtoTraceReader::ParsePacket(TraceBlobView packet) {
     }
   }
 
-  // If we're not forcing a full sort and this is a write_into_file trace, then
-  // use flush_period_ms as an indiciator for how big the sliding window for the
-  // sorter should be.
-  if (!context_->config.force_full_sort && decoder.has_trace_config()) {
-    auto config = decoder.trace_config();
-    protos::pbzero::TraceConfig::Decoder trace_config(config.data, config.size);
-
-    if (trace_config.write_into_file()) {
-      int64_t window_size_ns;
-      if (trace_config.has_flush_period_ms() &&
-          trace_config.flush_period_ms() > 0) {
-        // We use 2x the flush period as a margin of error to allow for any
-        // late flush responses to still be sorted correctly.
-        window_size_ns = static_cast<int64_t>(trace_config.flush_period_ms()) *
-                         2 * 1000 * 1000;
-      } else {
-        constexpr uint64_t kDefaultWindowNs =
-            180 * 1000 * 1000 * 1000ULL;  // 3 minutes.
-        PERFETTO_ELOG(
-            "It is strongly recommended to have flush_period_ms set when "
-            "write_into_file is turned on. You will likely have many dropped "
-            "events because of inability to sort the events correctly.");
-        window_size_ns = static_cast<int64_t>(kDefaultWindowNs);
-      }
-      context_->sorter->SetWindowSizeNs(window_size_ns);
-    }
+  if (decoder.has_trace_config()) {
+    ParseTraceConfig(decoder.trace_config());
   }
 
   // Use parent data and length because we want to parse this again
@@ -256,6 +232,52 @@ util::Status ProtoTraceReader::ParsePacket(TraceBlobView packet) {
   context_->sorter->PushTracePacket(timestamp, state, std::move(packet));
 
   return util::OkStatus();
+}
+
+void ProtoTraceReader::ParseTraceConfig(protozero::ConstBytes blob) {
+  protos::pbzero::TraceConfig::Decoder trace_config(blob);
+  // If we're forcing a full sort, we can keep using the INT_MAX duration set
+  // when we created the sorter.
+  const auto& cfg = context_->config;
+  if (cfg.sorting_mode == SortingMode::kForceFullSort) {
+    return;
+  }
+
+  base::Optional<int64_t> flush_period_window_size_ns;
+  if (trace_config.has_flush_period_ms() &&
+      trace_config.flush_period_ms() > 0) {
+    flush_period_window_size_ns =
+        static_cast<int64_t>(trace_config.flush_period_ms()) * 2 * 1000 * 1000;
+  }
+
+  // If we're trying to force flush period based sorting, use that as the
+  // window size if it exists.
+  if (cfg.sorting_mode == SortingMode::kForceFlushPeriodWindowedSort &&
+      flush_period_window_size_ns.has_value()) {
+    context_->sorter->SetWindowSizeNs(flush_period_window_size_ns.value());
+    return;
+  }
+
+  PERFETTO_DCHECK(cfg.sorting_mode == SortingMode::kDefaultHeureustics);
+
+  // If we're not forcing anything and this is a write_into_file trace, then
+  // use flush_period_ms as an indiciator for how big the sliding window for the
+  // sorter should be.
+  if (trace_config.write_into_file()) {
+    int64_t window_size_ns;
+    if (flush_period_window_size_ns.has_value()) {
+      window_size_ns = flush_period_window_size_ns.value();
+    } else {
+      constexpr uint64_t kDefaultWindowNs =
+          180 * 1000 * 1000 * 1000ULL;  // 3 minutes.
+      PERFETTO_ELOG(
+          "It is strongly recommended to have flush_period_ms set when "
+          "write_into_file is turned on. You will likely have many dropped "
+          "events because of inability to sort the events correctly.");
+      window_size_ns = static_cast<int64_t>(kDefaultWindowNs);
+    }
+    context_->sorter->SetWindowSizeNs(window_size_ns);
+  }
 }
 
 void ProtoTraceReader::HandleIncrementalStateCleared(
